# camera_computer_linux

./: INSTALL_XUBUNTU.md  README.md
examples/opencv_datetime_imwrite/: CMakeLists.txt  README.md  opencv_datetime_imwrite.cpp
examples/opencv_flycapture/: CMakeLists.txt  README.md  opencv_flycapture.cpp
examples/opencv_flycapture/CMakeModules/: FindFlyCapture.cmake  FindFlyCapture2.cmake
examples/opencv_tests/: CMakeLists.txt  README.md  opencv_tests.cpp
