cmake_minimum_required(VERSION 2.8)
project( opencv_datetime_imwrite )
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeModules/")

find_package( OpenCV REQUIRED )
if(${OpenCV_FOUND})
  set(opencv_datetime_imwrite_ext_link_LIBS ${OpenCV_LIBS})
  message(STATUS "OpenCV found")
else()
  message(STATUS "OpenCV not found")
endif()

find_package( Boost REQUIRED COMPONENTS date_time filesystem system )
if(${Boost_FOUND})
  include_directories(${Boost_INCLUDE_DIRS})
  set(opencv_datetime_imwrite_ext_link_LIBS ${opencv_datetime_imwrite_ext_link_LIBS} ${Boost_LIBRARIES})
  message(STATUS "Boost found")
else()
  message(STATUS "Boost not found")
endif()

add_executable( opencv_datetime_imwrite opencv_datetime_imwrite.cpp )
target_link_libraries( opencv_datetime_imwrite ${opencv_datetime_imwrite_ext_link_LIBS} )