cmake_minimum_required(VERSION 2.8)
project( opencv_flycapture )
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeModules/")
find_package( OpenCV REQUIRED )
if(${OpenCV_FOUND})
  message(STATUS "OpenCV found")
else()
  message(STATUS "OpenCV not found")
endif()
find_package( FlyCapture2 REQUIRED )
include_directories(${FlyCapture2_INCLUDE_DIRS})
set(opencv_flycapture_ext_link_LIBS ${OpenCV_LIBS})
set(opencv_flycapture_ext_link_LIBS ${opencv_flycapture_ext_link_LIBS} ${FlyCapture2_LIBRARIES})
add_executable( opencv_flycapture opencv_flycapture.cpp )
target_link_libraries( opencv_flycapture ${opencv_flycapture_ext_link_LIBS} )