cmake_minimum_required(VERSION 2.8)
project( opencv_tests )
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeModules/")
find_package( OpenCV REQUIRED )
if(${OpenCV_FOUND})
  message(STATUS "OpenCV found")
else()
  message(STATUS "OpenCV not found")
endif()
set(opencv_tests_ext_link_LIBS ${OpenCV_LIBS})
find_package( Boost REQUIRED COMPONENTS date_time filesystem system )
if(${Boost_FOUND})
  include_directories(${Boost_INCLUDE_DIRS})
  message(STATUS "Boost found")
else()
  message(STATUS "Boost not found")
endif()
set(opencv_tests_ext_link_LIBS ${opencv_tests_ext_link_LIBS} ${Boost_LIBRARIES})
add_executable( opencv_tests opencv_tests.cpp )
target_link_libraries( opencv_tests ${opencv_tests_ext_link_LIBS} )